# english_text_normalization

./: .gitignore  CHANGELOG.md  CITATION.cff  MANIFEST.in  Pipfile  README.md  name_corpus.txt  pyproject.toml  setup.cfg
src/english_text_normalization/: __init__.py  normalization_pipeline.py  sentence_extraction.py
src/english_text_normalization/adjustments/: __init__.py  abbreviations.py  emails.py  fraction_normalization.py  king_names_normalization.py  layout_normalization.py  money_normalization.py  month_normalization.py  normalization_of_certain_words_and_abbr.py  normalizaton_of_certain_words_and_abbr.py  normalize_degrees.py  numbers.py  other.py  remove_dots_after_single_letters.py  remove_dots_that_are_not_end_of_sentence.py  unit_abbreviations_normalization.py  write_out_special_characters.py
src/english_text_normalization/auxiliary_methods/: detect_king_names.py  operations.py  roman_numerals.py  search_pattern_in_books.py  txt_files_reading.py
src/english_text_normalization_cli/: cli.py  file_text_normalization.py  folder_text_normalization.py  globals.py  helper.py  logging_configuration.py  main.py  operations_listing.py  text_normalization.py
src/english_text_normalization_tests/: test_detect_king_names.py  test_emails.py  test_fraction_normalization.py  test_king_names_normalization.py  test_layout_normalization.py  test_money_normalization.py  test_month_normalization.py  test_normalizaton_of_certain_words_and_abbr.py  test_normalize_degrees.py  test_numbers.py  test_other.py  test_remove_dots_that_are_not_end_of_sentence.py  test_roman_numerals.py  test_search_pattern_in_books.py  test_sentence_extraction.py  test_txt_file_reading.py  test_unit_abbreviations_normalization.py  test_write_out_special_characters.py
tests/: test_detect_king_names.py  test_emails.py  test_king_names_normalization.py  test_layout_normalization.py  test_money_normalization.py  test_month_normalization.py  test_normalizaton_of_certain_words_and_abbr.py  test_normalize_degrees.py  test_numbers.py  test_processing_methods.py  test_remove_dots_after_single_letters.py  test_remove_dots_that_are_not_end_of_sentence.py  test_search_pattern_in_books.py  test_sentence_extraction.py  test_txt_file_reading.py  test_write_out_special_characters.py
